microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-tourism
  labels:
    name: health-tourism
    environment: production
